# FileTamer

./: .gitignore  Cargo.toml  README.md
src/: cleaner.rs  cli.rs  config.rs  logger.rs  main.rs  mover.rs  scanner.rs
